--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -3,11 +3,11 @@
   padding-top: 10px;
   clear: both;
   text-align: center;
-  color: #5a3a27;
-  background-color: #bf9d9c;
+  color: #616553;
+  background-color: #dbcbbe;
   border-top: solid;
   border-top-width: thick;
-  border-top-color: #5a3a27;
+  border-top-color: #616553;
   position: fixed;
   bottom: 0;
   width: 100%;
