--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,9 +9,15 @@ body {
     padding: 20px;
     margin-top: 20px!important;
     margin-bottom: auto!important;
-    border: 2px solid #9e7361!important;
+    border: 2px solid #d8b4a4!important;
     display: inline-block!important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    height: 400px;
+}
 
+.card-body {
+    max-height: 100px;
+    overflow: hidden;
 }
 
 .crop {
