--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@ body {
 .card {
 	padding: 20px;
 	margin-top: 20px !important;
-	margin-bottom: 50px !important;
+	margin-bottom: auto!important;
 	border: 2px solid #d8b4a4 !important;
 	display: inline-block !important;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
@@ -20,7 +20,7 @@ body {
 }
 
 .card-body-viewall {
-	max-height: 110px;
+	max-height: 100px;
 	overflow: hidden;
 }
 
