--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,9 @@ body {
 	padding: 20px;
 	margin-top: 20px !important;
 	margin-bottom: auto!important;
-	border: 2px solid #d8b4a4 !important;
+	/* margin-right: 10px!important;
+	margin-left: 10px!important; */
+	border: 2px solid #b29fb5 !important;
 	display: inline-block !important;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
@@ -47,11 +49,58 @@ body {
 	border: 2px solid #b29fb5;
 	margin: 20px;
 	display: inline-block !important;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
 
 .shrink {
-	-webkit-transform: scale(0.5);
-	-moz-transform: scale(0.5);
-	-ms-transform: scale(0.5);
-	transform: scale(0.5);
+	-webkit-transform: scale(0.75);
+	-moz-transform: scale(0.75);
+	-ms-transform: scale(0.75);
+	transform: scale(0.75);
 }
+
+
+/* iPad & iPad Pro (portrait) */
+@media only screen and (min-width : 768px) 
+and (max-width : 1100px) {
+	.rounded-circle {
+		width: 6rem!important;
+		height: 6rem!important;
+	}
+	.homeCard {
+		margin: 10px!important;
+	}
+	.shrink {
+		-webkit-transform: scale(0.9);
+		-moz-transform: scale(0.9);
+		-ms-transform: scale(0.9);
+		transform: scale(0.9);
+	}
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 320px) 
+and (max-device-width: 480px) {
+	/* Homepage circles */
+	.rounded-circle {
+		width: 6rem!important;
+		height: 6rem!important;
+	}
+	.card {
+		width: 90%!important;
+	}
+	/* Homepage ViewAll cards */
+	.shrink {
+		-webkit-transform: scale(0.9);
+		-moz-transform: scale(0.9);
+		-ms-transform: scale(0.9);
+		transform: scale(0.9);
+	}
+}
+  
