--- a/client/src/components/SingleKit/SingleKit.css
+++ b/client/src/components/SingleKit/SingleKit.css
@@ -5,12 +5,24 @@
 
 .avatar {
   border-radius: 50%;
-  height: auto;
+  height: 85px;
   width: 85px;
 }
 
 .username-handle {
-  margin-left: 1%;
-  font-size: larger;
+  font-size: 1.5rem;
   font-family: 'Nanum Gothic', sans-serif;
+}
+
+.card-viewone {
+  max-width: 50%;
+  height: auto;
+}
+
+.crop-viewone {
+  object-fit: cover;
+  overflow: hidden;
+  align-items: center;
+  height: auto;
+  max-height: 300px;
 }
