Updated the button and navbar color to a soft purple to match the border box of our cards. Profile and homepage have been updated.

--- a/client/src/components/Authentication/auth.css
+++ b/client/src/components/Authentication/auth.css
@@ -4,8 +4,8 @@ h2 {
 }
 
 .buttons {
-    background-color: #616553;
-    border: none;
+	border: 2px solid black;
+	background-color:  #b29fb5;
     color: white;
     box-shadow: 1px 1px #46483b;
     border-radius: 5px;
