--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -1,7 +1,7 @@
 /* Navbar */
 nav {
-    background-color: #c0a997;
-    /* background-color: #dbcbbe; */
+    background-color: #b29fb5;
+    box-shadow: 0 1px 5px rgba(0, 0, 0.2, 0.2);
 }
 
 a {
