Updated the sign-up and login page with background color to white and added border around modal.

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -4,7 +4,7 @@
 	clear: both;
 	text-align: center;
 	color: #616553;
-	background-color: #dbcbbe;
+    background-color: #b29fb5;
 	border-top: solid;
 	border-top-width: thick;
 	border-top-color: #616553;
