--- a/client/src/components/Authentication/auth.css
+++ b/client/src/components/Authentication/auth.css
@@ -1,29 +1,33 @@
 h2 {
-    font-family: 'Clicker Script', cursive;
-    font-size: 50px;
+  font-family: "Clicker Script", cursive;
+  font-size: 50px;
 }
 
 .buttons {
-	border: 2px solid black;
-	background-color:  #b29fb5;
-    color: white;
-    box-shadow: 1px 1px #46483b;
-    border-radius: 5px;
-    padding: 10px 15px;
-    margin: 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+  border: 2px solid black;
+  background-color: #b29fb5;
+  color: white;
+  box-shadow: 1px 1px #46483b;
+  border-radius: 5px;
+  padding: 10px 15px;
+  margin: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.buttons:hover {
+  cursor: pointer;
 }
 
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
 }
 /* .modal-content {
     position: fixed;
@@ -47,25 +51,25 @@ h2 {
 }  */
 
 .modal-content {
-    position: fixed;
-    color: #46483b;
-    background-color: #fff;
-    width: 70%;
-    height: 80%;
-    border: 2px solid #b29fb5;
-    box-shadow: 1px 1px 1px black;
-    padding: 16px;
-    left: 15%;
-    top: 15%;
-    box-sizing: border-box;
-    overflow: hidden;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    transition: all 0.3s ease-out;
+  position: fixed;
+  color: #46483b;
+  background-color: #fff;
+  width: 70%;
+  height: 80%;
+  border: 2px solid #b29fb5;
+  box-shadow: 1px 1px 1px black;
+  padding: 16px;
+  left: 15%;
+  top: 15%;
+  box-sizing: border-box;
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  transition: all 0.3s ease-out;
 }
 
 @media (max-width: 1024px) {
-    .modal-content {
-        top: 10%;
-    }
+  .modal-content {
+    top: 10%;
+  }
 }
