--- a/client/src/pages/ConsumerViewOne.css
+++ b/client/src/pages/ConsumerViewOne.css
@@ -21,3 +21,27 @@ svg:hover {
 	opacity: 0.5;
 	cursor: pointer;
 }
+
+.Toastify__toast--info {
+	background-color: #b29fb5!important;
+}
+
+.delete-button {
+	background-color: #e37676;
+	border: 1px solid #e37676;
+	color: white;
+	border-radius: 5px;
+	padding: 10px 15px;
+	margin: 5px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	transition: 0.3s ease;
+}
+
+.delete-button:hover {
+	background-color: #c46464!important;
+}
+
+/* style={{backgroundColor: '#e37676', border: '1px solid #e37676'}} */
